src/ui/snapshots/processes_80x24.snap
---
source: src/ui/layout.rs
---
 ◉ mxmon cpu  0.4% │ Apple M3 Max                                      HH:MM:SS
╭╸PROCESSES 160 · 10 running · 549 thr╺────────────────────────────────────────╮
│    PID USER         CPU%▼    PWR     MEM  THR S      TIME NAME               │
│    659 yusuf        171.0  783mW    1.0G    8 S   18m 39s bird               ┃
│    421 root         169.0  377mW    531M   17 S   10m 01s node               ┃
│    642 _windowse…   158.0  754mW   1012M    7 I   18m 02s mds_stores         ┃
│    404 yusuf        156.0  348mW    494M   16 R    9m 24s Xcode              ┃
│    863 yusuf        147.0  231mW    1.5G   20 S   26m 03s Music              ┃
│    625 root         145.0  725mW    975M    6 S   17m 25s Terminal           ┃
│    387 _windowse…   143.0  319mW    457M   15 S    8m 47s bird               ┃
│    829 root         121.0  173mW    1.4G   18 S   24m 49s cargo              ┃
│    591 _windowse…   119.0  667mW    901M    4 S   16m 11s Music              ┃
│    353 yusuf        117.0  261mW    383M   13 S    7m 33s Terminal           ┃
│    812 yusuf        108.0  144mW    1.3G   17 R   24m 12s claude             │
│    574 root         106.0  638mW    864M   26 I   15m 34s rust-analyzer      │
│    336 _windowse…   104.0  232mW    346M   12 R    6m 56s Finder             │
│    795 _windowse…    95.0  115mW    1.3G   16 S   23m 35s Safari             │
│    557 yusuf         93.0  609mW    827M   25 S   14m 57s cargo              │
│    319 root          91.0  203mW    309M   11 S    6m 19s Music              │
│    778 root          82.0   86mW    1.3G   15 I   22m 58s kernel_task        │
│    540 _windowse…    80.0  580mW    790M   24 R   14m 20s claude             │
│    302 yusuf         78.0  174mW    272M   10 I    5m 42s rust-analyzer      │
╰──────────────────────────────────────────────────────────────────────────────╯
  1 overview   2 processes   3 thermal   4 net   ? help  / filter  x kill
