src/ui/snapshots/settings_editing_120x36.snap
---
source: src/ui/layout.rs
---
 ◉ mxmon cpu  0.4% │ Apple M3 Max  4E+12P · 40-core GPU · 48G                   load 3.42 2.87 2.51  up 1d 2h  HH:MM:SS
╭╸CPU╺  44.0% ───────────────────────────────────────────────────────╮╭╸POWER╺ SYS  26.6W ─────────────────────────────╮
│     ▂     E 2.08GHz · P 2.79GHz                 63°C avg · 70°C max││PKG  6.54W  peak 13.2W                          │
│   ▄██▅                                                             ││CPU █████▌▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         3.70W│
│E  ████      62.0% @ 2.08GHz  360mW                                 ││GPU ████▎▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         2.82W│
│        ▃  ⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀││ANE ▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏          20mW│
│P0 ▆▃▂▅██    37.0% @ 2.79GHz  5.80W⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││RAM █▉▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         1.26W│
│   ▄▁      ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││DSP ████▋▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         3.10W│
│P1 ██▆▃▂▅    39.0% @ 2.79GHz  3.40W⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿││FAB █▎▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏         800mW│
╰────────────────────────────────────────────────────────────────────╯╰────────────────────────────────────────────────╯
╭╸GPU╺  39.9% ─────────────────────────────────────────────╮╭╸MEMORY╺  51% ────────────────────────────────────────────╮
│@ 1.30GHz  2.82W                                      59°C││24.6G / 48.0G                                pressure  OK │
│                                                          ││█████████████████████████████▊▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏▏│
│⣠⣤  ⣠⣄ ⢀⣤⡄ ⢀⣤⡀ ╭ settings ───────────────────────────────────────────────────────────────────────── ✕ ╮G              │
│⣿⣿⣷⣾⣿⣿⣷⣾⣿⣿⣶⣿⣿⣿⣶│   appearance   graphs   layout   sampling   network   keys   about                   │               │
│rend █████▊▏▏▏▏│   the only thing mxmon ever sends                                                    │⠴⠒⠲⣤⠤⠤⠤⠖⠒⢦⡤⠤⠤⠴⠒│
╰───────────────│ ──────────────────────────────────────────────────────────────────────────────────── │───────────────╯
╭╸NETWORK╺ ↓  22│   ping probe     ‹    on             ›  one ICMP echo per tier tick                  │───────────────╮
│Σ↓  7.4G  Σ↑  1│ ▸ ping host      [9.9.9.9▏       ]      live target                                  │▏    ⚡  charging
│↑   7.5 Mb/s⣾⣧⣷│ ──────────────────────────────────────────────────────────────────────────────────── │ full  adapter │
│⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿│   IPv4 literal or hostname, resolved once at startup  ·  config.toml: ping_host      │ SoC     6.54W │
│⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿│  type · ⏎ save · esc cancel                                                          │ DISP    3.10W │
│↓  47.5 Mb/s⢸⢸⢸╰──────────────────────────────────────────────────────────────────────────────────────╯ other   17.0W │
╰──────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────╯
╭╸PROCESSES╺ 160 · 10 running · 549 thr ───────────────────────────────────────────────────────────────────────────────╮
│    PID USER         CPU%▼    PWR     MEM     ↓/s     ↑/s  THR S      TIME NAME                                       │
│    659 yusuf        171.0  783mW    1.0G       –       –    8 S   18m 39s bird                                       ┃
│    421 root         169.0  377mW    531M       –       –   17 S   10m 01s node                                       ┃
│    642 _windowse…   158.0  754mW   1012M       –       –    7 I   18m 02s mds_stores                                 │
│    404 yusuf        156.0  348mW    494M       –       –   16 R    9m 24s Xcode                                      │
│    863 yusuf        147.0  231mW    1.5G       –       –   20 S   26m 03s Music                                      │
│    625 root         145.0  725mW    975M       –       –    6 S   17m 25s Terminal                                   │
│    387 _windowse…   143.0  319mW    457M       –       –   15 S    8m 47s bird                                       │
│    829 root         121.0  173mW    1.4G       –       –   18 S   24m 49s cargo                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  1 overview   2 processes   3 thermal   4 net   ? help  / filter  x kill  p pause  o settings  t theme  q quit
